--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <nav>
-      <ul>
-        <li><a href="./1-timer.html">timer</a></li>
-        <li><a href="./2-snackbar.html">snackbar</a></li>
+      <ul class="navigation">
+        <li><a href="./1-timer.html">Timer</a></li>
+        <li><a href="./2-snackbar.html">Snackbar</a></li>
       </ul>
     </nav>
   </body>
